# crypto-trading-agents

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Flow After Preferences Are Set.md  Makefile  README.md  README_metrics.md  alembic.ini  chat-interactions.md  docker-compose.yml  fly.toml  pyproject.toml  run_stack.sh.DEPRECATED  run_stack.sh.DEPRECATED.README  test.txt  tmux_advice_and_future_uxui.md
agents/: broker_agent_client.py  constants.py  context_manager.py  event_emitter.py  execution_agent_client.py  execution_config.py  judge_agent_client.py  langfuse_utils.py  prompt_manager.py  runtime_mode.py  shared_bus.py  strategy_planner.py  temporal_utils.py  utils.py  wallet_provider.py
app/: __init__.py
backtesting/: __init__.py  activities.py  backtest_activity.py  cli.py  constants.py  dataset.py  llm_backtest_engine.py  llm_shim.py  llm_strategist_runner.py  logging_config.py  persistence.py  regimes.py  report.py  reports.py  risk_config.py  simulator.py  strategies.py  vftp.py  warmup.py
configs/: backtest_suite.json  risk_limits.example.json  rpr_multipliers_p1a_202102.json  rpr_multipliers_p1a_202102_v2.json  rpr_multipliers_p1a_202102_v3.json  sample_plan.json
data_loader/: __init__.py  api_loader.py  base.py  caching.py  csv_loader.py  factors.py  normalization.py  synthetic_loader.py  utils.py
docker/: docker-compose.yml
docs/: AGGRESSIVE_TRADING_GUIDE.md  AI_SLOP_REFACTOR.md  ARCHITECTURE.md  AWS_DEPLOYMENT_SCOPE.md  CLOUD_SETUP_GUIDE.md  CODEX_HOWTO.md  FACTOR_EXPOSURE.md  FULL_STACK_WIRING_ISSUES.md  JUDGE_AGENT_README.md  JUDGE_UNIFICATION_PLAN.md  LLM_STRATEGIST_PROMPT_UPDATES.md  LOCAL_DEV_QUICKSTART.md  MARKET_ANALYTICS_AUDIT.md  (+31 more)
(+651 files in other folders)
