[project]
name = "crypto-trading-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.12",
    "asyncio>=3.4.3",
    "ccxt>=4.4.88",
    "fastapi>=0.115.12",
    "langfuse>=2.28.2",
    "mcp>=1.9.3",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "web3>=6.0.0",
    "temporalio>=1.12.0",
    "uvicorn>=0.34.3",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "openai>=1.86.0",
    "fastmcp>=2.9.2",
    "pytest>=8.4.1",
    "tiktoken>=0.5.0",
]
