[project]
name = "crypto-trading-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.16,<3.12",
    "aiosqlite>=0.20.0",
    "asyncio>=3.4.3",
    "ccxt>=4.4.88",
    "fastapi>=0.115.12",
    "langfuse>=2.28.2",
    "mcp>=1.9.3",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.1.0",
    "web3>=6.0.0",
    "temporalio>=1.12.0",
    "uvicorn>=0.34.3",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "openai>=1.86.0",
    "fastmcp>=2.9.2",
    "pytest>=8.4.1",
    "tiktoken>=0.5.0",
    "httpx>=0.27.2",
    "structlog>=24.4.0",
    "prometheus-client>=0.20.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.2.1",
    "alembic>=1.13.2",
    "typer>=0.12.5",
    "respx>=0.21.1",
    "pytest-asyncio>=0.23.7",
    "tenacity>=9.0.0",
    "cryptography>=42.0.5",
    "cdp-sdk>=1.33.3",
    "jinja2>=3.1.4",
    "websockets",
]

[project.scripts]
backtest = "backtesting.cli:main"
